--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A search engine built from scratch",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "ts-node-dev --respawn --cls --rs ./src/main.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,22 @@
   "bugs": {
     "url": "https://github.com/kaushik2107-bit/search-engine/issues"
   },
-  "homepage": "https://github.com/kaushik2107-bit/search-engine#readme"
+  "homepage": "https://github.com/kaushik2107-bit/search-engine#readme",
+  "dependencies": {
+    "@flyyer/robotstxt": "^3.0.1",
+    "blessed": "^0.1.81",
+    "chalk": "^4.1.2",
+    "lemmatizer": "^0.0.1",
+    "pg": "^8.11.5",
+    "puppeteer": "^22.7.1",
+    "ts-node-dev": "^2.0.0",
+    "valid-url": "^1.0.9",
+    "wink-nlp-utils": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/blessed": "^0.1.25",
+    "@types/pg": "^8.11.5",
+    "@types/valid-url": "^1.0.7",
+    "typescript": "^5.4.5"
+  }
 }
