--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "ts-node-dev --respawn --cls --rs ./src/main.ts",
-    "test": "jest"
+    "server": "ts-node-dev --respawn --cls --rs ./src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "@flyyer/robotstxt": "^3.0.1",
     "blessed": "^0.1.81",
     "chalk": "^4.1.2",
+    "express": "^4.19.2",
     "lemmatizer": "^0.0.1",
     "pg": "^8.11.5",
     "puppeteer": "^22.7.1",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/blessed": "^0.1.25",
+    "@types/express": "^4.17.21",
     "@types/pg": "^8.11.5",
     "@types/valid-url": "^1.0.7",
     "typescript": "^5.4.5"
