--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "lemmatizer": "^0.0.1",
+    "node-schedule": "^2.1.1",
     "pg": "^8.11.5",
     "puppeteer": "^22.7.1",
     "ts-node-dev": "^2.0.0",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/blessed": "^0.1.25",
     "@types/express": "^4.17.21",
+    "@types/node-schedule": "^2.1.7",
     "@types/pg": "^8.11.5",
     "@types/valid-url": "^1.0.7",
     "typescript": "^5.4.5"
